fix footer and overflow content for mobile view

--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -210,13 +210,16 @@ footer{
 }
 .footer-logo img{
     height:60px;
+    display:none;
+}
+.footer-content:first-child{
+    display:none;
 }
 .follow-us{
     width:30%;
 }
 .follow-us p{
     margin-top:20px;
-
 }
 .follow-us p i{
     margin-right:15px;
@@ -240,7 +243,6 @@ main{
 }
 .article{
     width:90%;
-
     padding:5px;
     box-shadow:0px 0px 2px 2px #ccc;
 }
@@ -299,8 +301,6 @@ main{
 .hashtag3{
     color:rgb(98, 15, 175);
 }
-
-
 
 
 @media (min-width:768px){
@@ -392,6 +392,23 @@ main{
     }
     .footer-logo{
         gap:30px;
+        display:flex;
+    }
+    .footer-logo img{
+        display:block;
+    }
+    .footer-content:first-child{
+        display:block;
+    }
+    .article:first-child .article-img{
+        height:63%;
+    }
+    .article:first-child .article-content{
+        margin-top:10px;
+        height:35%;
+        font-size:15px;
+        line-height: 22px;
+        text-align: justify;
     }
 
 }
@@ -464,5 +481,11 @@ main{
     }
     .footer-logo{
         gap:40px;
+    }
+    .footer-logo img{
+        display:block;
+    }
+    .footer-content:first-child{
+        display:block;
     }
 }
